--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,16 @@ dependencies:
 
   # NoSQL Database
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
   # data chart
   fl_chart: ^0.55.2
 
   # bluetooth communication
   flutter_reactive_ble: ^5.0.2
+
+  # date time
+  intl: ^0.17.0
 
   permission_handler: ^10.2.0
 
@@ -33,6 +37,11 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+
+  # hive
+  build_runner: ^2.3.2
+  hive_generator: ^2.0.0
+
 
 flutter:
 
