* 수정내역 - google font package 추가 - text theme 추가 - 기존 사용자 등록 dialog창 없애고 사용자 등록 페이지 추가 - user data model 수정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   # date time
   intl: ^0.17.0
 
+  # google font
+  google_fonts: ^3.0.1
+
   permission_handler: ^10.2.0
 
 dev_dependencies:
