--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_fonts: ^3.0.1
 
   permission_handler: ^10.2.0
+  flutter_foreground_task: ^3.10.0
 
 dev_dependencies:
   flutter_test:
