* 수정내역 - 2022.12.01 ○ foreground process 기능 구현   - foreground 진입시 작업을 처리할 클래스 구현 ( BackTaskHandler )   - 작업을 처리 할 클래스는 설정 된 수집간격에 따라 생체 데이터 수집 및 DB 저장
○ 실시간 생체 데이터 출력 차트 필터링 개선
  - 30개 초과된 데이터가 들어온 경우, 첫 번째 데이터 삭제 후 기존 데이터 좌표 이동

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
    <application
         android:label="biometric_data_monitoring"
@@ -36,6 +37,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <!-- Add permissions for Foreground-->
+        <service android:name="com.pravera.flutter_foreground_task.service.ForegroundService" />
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
